--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 </div>
     <p> <a href="https://github.com/h5bp/caniuse/contributors">&amp; more</a> </p>
-    <p>This project was inspired by <a href="//get.webgl.org/">get.webgl.org</a> and was initiated over at <a href="github.com/paulirish/lazyweb-requests/issues/39">github.com/paulirish/lazyweb-requests#39</a>. Much thanks to <a href="//twitter.com/fyrd">Alexis Deveria</a> for the generous sharing of <a href="http://caniuse.com">caniuse</a> data. </p>
+    <p>This project was inspired by <a href="//get.webgl.org/">get.webgl.org</a> and was initiated over at <a href="http://github.com/paulirish/lazyweb-requests/issues/39">github.com/paulirish/lazyweb-requests#39</a>. Much thanks to <a href="//twitter.com/fyrd">Alexis Deveria</a> for the generous sharing of <a href="http://caniuse.com">caniuse</a> data. </p>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="site/js/jquery-1.7.1.min.js"><\/script>')</script>
