--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
           </div>
          </div>
       </form>
+
+        <div class="preview">
+          <h3>Preview</h3>
+          <div class="response"></div>
+          <div class="placeholder"></div>
+        </div
+
       <div class="api-example">
         <h3>Use</h3>
         <p class="js-help-json">To render the HTML data within an element, just use the value of <code>data.html</code> as the content (<a href="http://jsfiddle.net/TS8yS/">demo</a>).</p>
@@ -140,7 +147,10 @@
         <img src="http://api.twitter.com/1/users/profile_image/aaronlayton?size=normal" alt="Aaron Layton">
         <b>Aaron</b> Layton 
       </a>
-
+      <a href="http://twitter.com/addyosmani">
+        <img src="http://api.twitter.com/1/users/profile_image/addyosmani?size=normal" alt="Addy Osmani">
+        <b>Addy</b> Osmani
+      </a>
 </div>
     <p> <a href="https://github.com/h5bp/caniuse/contributors">&amp; more</a> </p>
     <p>This project was inspired by <a href="//get.webgl.org/">get.webgl.org</a> and was initiated over at <a href="http://github.com/paulirish/lazyweb-requests/issues/39">github.com/paulirish/lazyweb-requests#39</a>. Much thanks to <a href="//twitter.com/fyrd">Alexis Deveria</a> for the generous sharing of <a href="http://caniuse.com">caniuse</a> data. </p>
