adding output preview

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
           </div>
          </div>
       </form>
+      <div class="preview">
+        <div class="response"></div>
+        <div class="placeholder"></div>
+      </div
       <div class="api-example">
         <h3>Use</h3>
         <a href="#" id="url" target="_blank"></a>
